plugins {
	id 'org.springframework.boot' version '3.3.3'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'application'
}

application {
	mainClassName = 'dev.dbaltor.transfermoney.TransferMoneyApp'
}

group = 'online.dbaltor'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '21'
targetCompatibility = '21'

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web' // required by spring doc and h2 console
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
	implementation 'org.flywaydb:flyway-core'
	implementation 'org.javamoney:moneta:1.4.4'
	runtimeOnly 'io.r2dbc:r2dbc-h2'
	runtimeOnly 'com.h2database:h2'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
	compileOnly 'org.projectlombok:lombok:1.18.34'
	annotationProcessor 'org.projectlombok:lombok:1.18.34'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'io.projectreactor:reactor-test'
	testCompileOnly 'org.projectlombok:lombok:1.18.34'
	testAnnotationProcessor 'org.projectlombok:lombok:1.18.34'
}

test {
	useJUnitPlatform()
	jvmArgs("-XX:+EnableDynamicAgentLoading", "-Xshare:off")
}